--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,9 @@
       <p>
         <ol>
             <li><span data-prompt="grunt-cli" class="prompt-link">Install grunt CLI</span></li>
-            <li><span data-prompt="grunt-init" class="prompt-link">Install grunt-init</span></li>
+            <li><span data-prompt="grunt-init-install" class="prompt-link">Install grunt-init</span></li>
+            <li><span data-prompt="grunt-init-tpl" class="prompt-link">Install grunt-init template</span></li>
+            <li><span data-prompt="grunt-init" class="prompt-link">Project init</span></li>
         </ol>
       </p>
     </div>
@@ -83,9 +85,7 @@
         <div class="console-inner">
           <p></p>
         </div>
-        <div class="console-overlay">
-
-        </div>
+        <!--<div class="console-overlay"></div>-->
       </div>
     </div>
   </div>
