--- a/app/index.html
+++ b/app/index.html
@@ -593,9 +593,13 @@ Total 180ms
                     <li><span id="displayer-sprite">Sprites</span></li>
                     <li><span id="displayer-jshint">Js Hint</span></li>
                     <li><span id="displayer-svg">SVG</span></li>
+                    <li><span>...</span></li>
                 </ul>
             </p>
         </div>
+        <a href="#seemore" class="btn btn-circle page-scroll">
+            <i class="fa fa-angle-double-down animated"></i>
+        </a>
     </div>
 </section>
 <section id="seemore" class="container content-section">
@@ -608,7 +612,7 @@ Total 180ms
             <p>
                 <b>RTFM ?</b>
                 <ul>
-                    <li><a href="http://gruntjs.com/">gruntjs.com</a></li>
+                    <li><a href="http://gruntjs.com/" target="_blank">gruntjs.com</a></li>
                 </ul>
             </p>
         </div>
